# phasegrid

./: .coverage  .coveragerc  .env  .env.backup_20250625_140646  .env.backup_20250701_113521  .env.backup_before_webhooks  .env.example  .env.template  .gitignore  A2_evidence_report.txt  A6_evidence.md  B1_findings.txt  B2_closeout.md  CYCLE_COMPLETE.md  DEPLOYMENT_REPORT.md  DEPLOYMENT_REPORT_FINAL.md  PG108_SUMMARY.md  PG109_SUMMARY.md  PR_DESCRIPTION.md  QUICKSTART.md  QUICKSTART.md.backup  QUICKSTART_backup_before_odds.md  QUICKSTART_old.md  README.md  RUNBOOK.md  RUNBOOK_updated.md  TEST_STATUS.md  add_phase_data.py  alert_system.py  alert_system_enhanced.py  analyze_bias.py  analyze_bias_fixed.py  analyze_html.py  analyze_project.ps1  analyze_props.py  analyze_structure.py  analyze_tests.py  apply_anomaly_filter_patch.py  apply_fixes.py  apply_pg107_patch.py  (+261 more)
alerts/: __init__.py  notifier.py  sms_notifier.py
api_clients/: results_api.py
archive/: paper_slips_20250623.csv  paper_slips_20250624.csv
auth/: sheets_auth.py
backup_20250624_214556/: gitignore_original  paper_trader_original.py
backup_before_hardening/: scripts_auto_paper.py
betting_cards/: card_2025-06-26.txt  slips_2025-06-26.json  tracking_2025-06-26.json
checklists/: post_slate_intake_2025-06-18.md
config/: cycle_config.json  cycle_config.yaml  payout_tables.json  payout_tables.json.backup  phase_config.json  phase_kelly_divisors.json  phase_mapping.json  sheets_cfg.json  starting_bankroll.json
connection/: test_verify_sheets.py
core/: analyzer.py  analyzer_v2.py  analzer_v2.py  (+16 more)
(+541 files in other folders)
