[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "wnba-predictor"
version = "0.1.0"
description = "WNBA game prediction and betting analysis system"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "requests>=2.26.0",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.6.0",
    "pytest-timeout>=2.1.0",
]
dev = [
    "black>=22.0.0",
    "ruff>=0.0.250",
    "mypy>=0.990",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov-fail-under=80",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/env/*",
    "setup.py",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
